# feedback-prompt-learning

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml
configs/: config.yaml
configs/optimizer/: mcts.yaml  mcts_promptagent.yaml
feedback_prompt_learning/: __init__.py  config.py
feedback_prompt_learning/configs/: config.yaml  datasets.yaml
feedback_prompt_learning/configs/optimizer/: mcts.yaml  mcts_feedback.yaml
feedback_prompt_learning/configs/optimizer/search_algo/: mcts_feedback.yaml  mcts_promptagent.yaml
feedback_prompt_learning/core/: __init__.py  example.py  example_set.py  prompt.py  signature.py
feedback_prompt_learning/data/: __init__.py  feedback.py
feedback_prompt_learning/data/task/: base_task.py  bigbench.py
feedback_prompt_learning/search_algo/: __init__.py  mcts.py  world_model.py
feedback_prompt_learning/utils/: eval_bigbench.py  eval_mcts.py  similarity.py
tests/: test_example.py  test_example_formatting.py  test_example_set.py  test_signature.py
